--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,22 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Speed"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/speedBar"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/speedBar"
+        app:layout_constraintHorizontal_bias="0.251"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ToggleButton
         android:id="@+id/platooningButton"
         android:layout_width="187dp"
@@ -35,13 +51,11 @@
         android:text="Stop"
         android:layout_marginStart="98dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="67dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.498"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/steerBar"
         android:layout_marginRight="8dp"
         app:layout_constraintHorizontal_bias="0.0" />
@@ -87,7 +101,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.498"
-        android:layout_marginRight="406dp"
+        android:layout_marginRight="407dp"
         app:layout_constraintRight_toRightOf="parent" />
 
     <SeekBar
@@ -127,16 +141,31 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Speed in cm/s"
+        android:text="Steering"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/centerButton"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/centerButton"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toTopOf="@+id/setSpeedEditText"
-        app:layout_constraintLeft_toRightOf="@+id/btnStop"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/setSpeedButton"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:text="Speed in cm/s"
+        app:layout_constraintBottom_toTopOf="@+id/setSpeedEditText"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/setSpeedEditText"
+        app:layout_constraintRight_toLeftOf="@+id/setSpeedButton"
         app:layout_constraintTop_toBottomOf="@+id/steerBar"
-        app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
