--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,16 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:text="Speed"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/speedBar"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/speedBar"
-        app:layout_constraintHorizontal_bias="0.251"
+        app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintVertical_bias="0.0" />
 
     <ToggleButton
@@ -49,16 +49,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
-        android:layout_marginStart="98dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintVertical_bias="0.7"
+        android:layout_marginTop="138dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="57dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/steerBar"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.12" />
 
 
     <ToggleButton
@@ -93,15 +94,16 @@
 
     <SeekBar
         android:id="@+id/speedBar"
-        android:layout_width="250dp"
-        android:layout_height="20dp"
+        android:layout_width="300dp"
+        android:layout_height="22dp"
         android:rotation="270"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.498"
-        android:layout_marginRight="407dp"
+        android:layout_marginRight="406dp"
+        android:progress="25"
         app:layout_constraintRight_toRightOf="parent" />
 
     <SeekBar
@@ -154,9 +156,28 @@
 
     <TextView
         android:id="@+id/textView7"
+        android:layout_width="68dp"
+        android:layout_height="31dp"
+        android:text="-"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/btnStop"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnStop"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/btnStop"
+        app:layout_constraintHorizontal_bias="0.236" />
+
+    <TextView
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
