--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -13,36 +13,37 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:text="Speed"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/speedBar"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/speedBar"
-        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintVertical_bias="0.0" />
 
     <ToggleButton
-        android:id="@+id/platooningButton"
+        android:id="@+id/autoSteerButton"
         android:layout_width="187dp"
         android:layout_height="47dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="20dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="54dp"
         android:text="Cruise Control"
-        android:textOff="start platooning"
-        android:textOn="stop platooning"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/btnStop"
+        android:textOff="start autosteering"
+        android:textOn="stop autosteering"
+        app:layout_constraintHorizontal_bias="0.707"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/steerBar"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/cruiseControlButton" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/cruiseControlButton"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnStop"
@@ -52,14 +53,14 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.7"
+        app:layout_constraintVertical_bias="0.65"
         android:layout_marginTop="138dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginLeft="57dp"
+        android:layout_marginLeft="65dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.12" />
+        app:layout_constraintHorizontal_bias="0.14" />
 
 
     <ToggleButton
@@ -74,13 +75,13 @@
         android:text="Cruise Control"
         android:textOff="START CRUISE CONTROL"
         android:textOn="stop cruise control"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintLeft_toRightOf="@+id/btnStop"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/steerBar"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.843" />
 
     <Button
         android:id="@+id/dcButton"
@@ -102,7 +103,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.498"
-        android:layout_marginRight="406dp"
+        android:layout_marginRight="480dp"
         android:progress="25"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -111,8 +112,8 @@
         android:layout_width="323dp"
         android:layout_height="42dp"
         app:layout_constraintLeft_toRightOf="@+id/speedBar"
-        android:layout_marginLeft="64dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginTop="102dp"
         app:layout_constraintTop_toBottomOf="@+id/dcButton" />
 
     <Button
@@ -121,11 +122,11 @@
         android:layout_height="wrap_content"
         android:text="set speed"
         app:layout_constraintRight_toLeftOf="@+id/cruiseControlButton"
-        android:layout_marginRight="13dp"
+        android:layout_marginRight="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/platooningButton"
+        app:layout_constraintTop_toBottomOf="@+id/autoSteerButton"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
@@ -148,9 +149,9 @@
         app:layout_constraintLeft_toLeftOf="@+id/centerButton"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/centerButton"
-        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp" />
 
@@ -169,9 +170,9 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/btnStop"
-        app:layout_constraintHorizontal_bias="0.236" />
+        app:layout_constraintHorizontal_bias="0.33" />
 
     <TextView
         android:id="@+id/textView9"
@@ -201,6 +202,24 @@
         app:layout_constraintLeft_toLeftOf="@+id/steerBar"
         app:layout_constraintRight_toRightOf="@+id/steerBar"
         app:layout_constraintTop_toBottomOf="@+id/dcButton" />
+
+    <ToggleButton
+        android:id="@+id/platoonButton"
+        android:layout_width="116dp"
+        android:layout_height="93dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="ToggleButton"
+        android:textOff="start platooning"
+        android:textOn="stop platooning"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.971" />
 
 
 </android.support.constraint.ConstraintLayout>
